--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="text-gray-500">
     
     <div> <!-- Content Wrapper-->
 
         <div>
             <nav>
                 <div>
-                    <h1>
+                    <h1 class="font-bold uppercase p-4 border-b border-gray-100">
                         <a href="/">Food Ninja</a>
                     </h1>
                 </div>
 
                 <ul>
-                    <li>
+                    <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
                         </a>
@@ -40,7 +40,7 @@
             </nav>
         </div> <!-- End Nav -->
 
-        <main>
+        <main class="px-16 py-6">
 
             <div>
                 <a href="#">Log In</a>
@@ -48,16 +48,16 @@
             </div>
 
             <header>
-                <h2>Recipes</h2>
-                <h3>For Ninjas</h3>
+                <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
+                <h3 class="text-2xl font-semibold">For Ninjas</h3>
             </header>
 
             <div>
-                <h4>Latest Recipes</h4>
-                <div> 
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
+                <div class="mt-8"> 
                     <!-- Cards Goes Here -->
                     <div>
-                        <img src="" alt="">
+                        <img src="img/stew.jpg" alt="stew">
                         <div>
                             <span>5 Bean Chilli Stew</span>
                             <span>Recipe By Mario</span>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
 
-                <h4>Most Popular</h4>
-                <div>
+                <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
+                <div class="mt-8">
                     <!-- Cards Goes Here -->
                 </div>
 
