--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
         <main class="px-16 py-6">
 
             <div>
-                <a href="#">Log In</a>
-                <a href="#">Sign Up</a>
+                <a href="#" class="text-primary">Log In</a>
+                <a href="#" class="text-primary">Sign Up</a>
             </div>
 
             <header>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div>
-                    <div>Load More</div>
+                    <div class="bg-secodary-100 text-secondary-200">Load More</div>
                 </div>
 
             </div>
