--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body class="text-gray-500">
+<body class="text-gray-500 font-body">
     
-    <div> <!-- Content Wrapper-->
+    <div class="grid md:grid-cols-3"> <!-- Content Wrapper-->
 
-        <div>
+        <div class="md:col-span-1">
             <nav>
                 <div>
                     <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -22,29 +22,38 @@
                     <li class="text-gray-700 font-bold">
                         <a href="#">
                             <span>Home</span>
+                            <svg class="w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                            </svg>
                         </a>
                     </li>
 
                     <li>
                         <a href="#">
                             <span>About</span>
+                            <svg class="w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
                         </a>
                     </li>
 
                     <li>
                         <a href="#">
                             <span>Contact</span>
+                            <svg class="w-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                            </svg>
                         </a>
                     </li>
                 </ul>
             </nav>
         </div> <!-- End Nav -->
 
-        <main class="px-16 py-6">
+        <main class="px-16 py-6 md:col-span-2">
 
-            <div>
-                <a href="#" class="text-primary">Log In</a>
-                <a href="#" class="text-primary">Sign Up</a>
+            <div class="flex justify-center md:justify-end">
+                <a href="#" class="text-primary btn border-primary md:border-2">Log In</a>
+                <a href="#" class="text-primary ml-2 btn border-primary md:border-2">Sign Up</a>
             </div>
 
             <header>
@@ -54,13 +63,47 @@
 
             <div>
                 <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipes</h4>
-                <div class="mt-8"> 
+                <div class="mt-8 grid lg:grid-cols-3 gap-10"> 
                     <!-- Cards Goes Here -->
-                    <div>
-                        <img src="img/stew.jpg" alt="stew">
-                        <div>
-                            <span>5 Bean Chilli Stew</span>
-                            <span>Recipe By Mario</span>
+                    <div class="card">
+                        <img src="img/stew.jpg" alt="stew" class="w-full h-32 sm:48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">5 Bean Chilli Stew</span>
+                            <span class="block text-gray-500 text-sm">Recipe By Mario</span>
+                        </div>
+                        <div class="badge">
+                            <svg class="w-5 inline" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <span>25 mins</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/noodles.jpg" alt="noodles" class="w-full h-32 sm:48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Veg Noodles</span>
+                            <span class="block text-gray-500 text-sm">Recipe By Mario</span>
+                        </div>
+                        <div class="badge">
+                            <svg class="w-5 inline" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <span>25 mins</span>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="img/curry.jpg" alt="curry" class="w-full h-32 sm:48 object-cover">
+                        <div class="m-4">
+                            <span class="font-bold">Tofu Curry</span>
+                            <span class="block text-gray-500 text-sm">Recipe By Mario</span>
+                        </div>
+                        <div class="badge">
+                            <svg class="w-5 inline" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                            <span>25 mins</span>
                         </div>
                     </div>
                 </div>
@@ -70,8 +113,8 @@
                     <!-- Cards Goes Here -->
                 </div>
 
-                <div>
-                    <div class="bg-secodary-100 text-secondary-200">Load More</div>
+                <div class="flex justify-center">
+                    <div class="bg-secodary-100 text-secondary-200 btn">Load More</div>
                 </div>
 
             </div>
