--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
             </nav>
         </div> <!-- End Nav -->
 
-        <main class="px-16 py-6 md:col-span-2">
+        <main class="px-16 py-6 bg-gray-100 md:col-span-2">
 
             <div class="flex justify-center md:justify-end">
-                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white">Log In</a>
-                <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white hover:shadow-lg">Sign Up</a>
+                <a href="#" class="text-primary btn border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Log In</a>
+                <a href="#" class="text-primary ml-2 btn border-primary md:border-2 hover:bg-primary hover:text-white hover:shadow-lg transition ease-out duration-500">Sign Up</a>
             </div>
 
             <header>
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="flex justify-center">
-                    <div class="bg-secodary-100 text-secondary-200 btn hover:shadow-inner">Load More</div>
+                    <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load More</div>
                 </div>
 
             </div>
